Terminando iteraciones para MinorCPU

--- a/Proyecto 3/CPUs/MinorCPU/ARM/SPEC/Benchmarks/CacheBM/config.ini
+++ b/Proyecto 3/CPUs/MinorCPU/ARM/SPEC/Benchmarks/CacheBM/config.ini
@@ -169,7 +169,7 @@ replace_expansions=true
 replacement_policy=system.cpu.dcache.replacement_policy
 response_latency=2
 sequential_access=false
-size=524288
+size=1048576
 system=system
 tag_latency=2
 tags=system.cpu.dcache.tags
@@ -208,7 +208,7 @@ power_model=
 power_state=system.cpu.dcache.tags.power_state
 replacement_policy=system.cpu.dcache.replacement_policy
 sequential_access=false
-size=524288
+size=1048576
 system=system
 tag_latency=2
 warmup_percentage=0
@@ -218,7 +218,7 @@ type=SetAssociative
 assoc=2
 entry_size=64
 eventq_index=0
-size=524288
+size=1048576
 
 [system.cpu.dcache.tags.power_state]
 type=PowerState
@@ -909,7 +909,7 @@ replace_expansions=true
 replacement_policy=system.cpu.icache.replacement_policy
 response_latency=2
 sequential_access=false
-size=524288
+size=1048576
 system=system
 tag_latency=2
 tags=system.cpu.icache.tags
@@ -948,7 +948,7 @@ power_model=
 power_state=system.cpu.icache.tags.power_state
 replacement_policy=system.cpu.icache.replacement_policy
 sequential_access=false
-size=524288
+size=1048576
 system=system
 tag_latency=2
 warmup_percentage=0
@@ -958,7 +958,7 @@ type=SetAssociative
 assoc=2
 entry_size=64
 eventq_index=0
-size=524288
+size=1048576
 
 [system.cpu.icache.tags.power_state]
 type=PowerState
@@ -1251,7 +1251,7 @@ replace_expansions=true
 replacement_policy=system.l2.replacement_policy
 response_latency=20
 sequential_access=false
-size=524288
+size=1048576
 system=system
 tag_latency=20
 tags=system.l2.tags
@@ -1290,7 +1290,7 @@ power_model=
 power_state=system.l2.tags.power_state
 replacement_policy=system.l2.replacement_policy
 sequential_access=false
-size=524288
+size=1048576
 system=system
 tag_latency=20
 warmup_percentage=0
@@ -1300,7 +1300,7 @@ type=SetAssociative
 assoc=1
 entry_size=64
 eventq_index=0
-size=524288
+size=1048576
 
 [system.l2.tags.power_state]
 type=PowerState
