--- a/Proyecto 3/CPUs/O3CPU/ARM/SPEC/Benchmarks/CacheBM/config.ini
+++ b/Proyecto 3/CPUs/O3CPU/ARM/SPEC/Benchmarks/CacheBM/config.ini
@@ -981,8 +981,8 @@ eventq_index=0
 
 [system.cpu.workload]
 type=Process
-cmd=./src/benchmark 1 ./data/testO3.txt ./data/output.txt
-cwd=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/ARM/blackscholes
+cmd=./src/benchmark ./data/inp.in
+cwd=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/ARM/429.mcf
 drivers=
 egid=100
 env=
@@ -1288,19 +1288,19 @@ system=system
 type=RedirectPath
 app_path=/proc
 eventq_index=0
-host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/O3CPU/ARM/PARSEC/Benchmarks/CacheBM/fs/proc
+host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/O3CPU/ARM/SPEC/Benchmarks/CacheBM/fs/proc
 
 [system.redirect_paths1]
 type=RedirectPath
 app_path=/sys
 eventq_index=0
-host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/O3CPU/ARM/PARSEC/Benchmarks/CacheBM/fs/sys
+host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/O3CPU/ARM/SPEC/Benchmarks/CacheBM/fs/sys
 
 [system.redirect_paths2]
 type=RedirectPath
 app_path=/tmp
 eventq_index=0
-host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/O3CPU/ARM/PARSEC/Benchmarks/CacheBM/fs/tmp
+host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/O3CPU/ARM/SPEC/Benchmarks/CacheBM/fs/tmp
 
 [system.tol2bus]
 type=CoherentXBar
