--- a/Proyecto 3/CPUs/O3CPU/ARM/PARSEC/Benchmarks/RPBM/config.json
+++ b/Proyecto 3/CPUs/O3CPU/ARM/PARSEC/Benchmarks/RPBM/config.json
@@ -1130,7 +1130,7 @@
                         "cmd": [
                             "./src/benchmark",
                             "1",
-                            "./data/test.txt",
+                            "./data/testO3.txt",
                             "./data/output.txt"
                         ],
                         "cwd": "/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/ARM/blackscholes",
@@ -1452,8 +1452,8 @@
             "prefetcher": null,
             "replace_expansions": true,
             "replacement_policy": {
-                "type": "MRURP",
-                "cxx_class": "gem5::replacement_policy::MRU",
+                "type": "RandomRP",
+                "cxx_class": "gem5::replacement_policy::Random",
                 "name": "replacement_policy",
                 "path": "system.l2.replacement_policy",
                 "eventq_index": 0
