--- a/Proyecto 3/CPUs/O3CPU/ARM/SPEC/Benchmarks/CacheBM/config.json
+++ b/Proyecto 3/CPUs/O3CPU/ARM/SPEC/Benchmarks/CacheBM/config.json
@@ -1200,7 +1200,7 @@
                     },
                     "response_latency": 2,
                     "sequential_access": false,
-                    "size": 16384,
+                    "size": 1048576,
                     "system": "system",
                     "tag_latency": 2,
                     "tags": {
@@ -1221,7 +1221,7 @@
                             "assoc": 2,
                             "entry_size": 64,
                             "eventq_index": 0,
-                            "size": 16384
+                            "size": 1048576
                         },
                         "power_model": [],
                         "power_state": {
@@ -1239,7 +1239,7 @@
                         },
                         "replacement_policy": "system.cpu.dcache.replacement_policy",
                         "sequential_access": false,
-                        "size": 16384,
+                        "size": 1048576,
                         "system": "system",
                         "tag_latency": 2,
                         "warmup_percentage": 0
@@ -1306,7 +1306,7 @@
                     },
                     "response_latency": 2,
                     "sequential_access": false,
-                    "size": 16384,
+                    "size": 1048576,
                     "system": "system",
                     "tag_latency": 2,
                     "tags": {
@@ -1327,7 +1327,7 @@
                             "assoc": 2,
                             "entry_size": 64,
                             "eventq_index": 0,
-                            "size": 16384
+                            "size": 1048576
                         },
                         "power_model": [],
                         "power_state": {
@@ -1345,7 +1345,7 @@
                         },
                         "replacement_policy": "system.cpu.icache.replacement_policy",
                         "sequential_access": false,
-                        "size": 16384,
+                        "size": 1048576,
                         "system": "system",
                         "tag_latency": 2,
                         "warmup_percentage": 0
@@ -1458,7 +1458,7 @@
             },
             "response_latency": 20,
             "sequential_access": false,
-            "size": 16384,
+            "size": 1048576,
             "system": "system",
             "tag_latency": 20,
             "tags": {
@@ -1479,7 +1479,7 @@
                     "assoc": 1,
                     "entry_size": 64,
                     "eventq_index": 0,
-                    "size": 16384
+                    "size": 1048576
                 },
                 "power_model": [],
                 "power_state": {
@@ -1497,7 +1497,7 @@
                 },
                 "replacement_policy": "system.l2.replacement_policy",
                 "sequential_access": false,
-                "size": 16384,
+                "size": 1048576,
                 "system": "system",
                 "tag_latency": 20,
                 "warmup_percentage": 0
