--- a/Proyecto 3/CPUs/O3CPU/RISCV/SPEC/Benchmarks/CacheBM/config.json
+++ b/Proyecto 3/CPUs/O3CPU/RISCV/SPEC/Benchmarks/CacheBM/config.json
@@ -40,7 +40,7 @@
                 "app_path": "/proc",
                 "eventq_index": 0,
                 "host_paths": [
-                    "/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/TraceCPU/RISCV/SPEC/Benchmarks/CacheBM/fs/proc"
+                    "/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/O3CPU/RISCV/SPEC/Benchmarks/CacheBM/fs/proc"
                 ]
             },
             {
@@ -51,7 +51,7 @@
                 "app_path": "/sys",
                 "eventq_index": 0,
                 "host_paths": [
-                    "/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/TraceCPU/RISCV/SPEC/Benchmarks/CacheBM/fs/sys"
+                    "/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/O3CPU/RISCV/SPEC/Benchmarks/CacheBM/fs/sys"
                 ]
             },
             {
@@ -62,7 +62,7 @@
                 "app_path": "/tmp",
                 "eventq_index": 0,
                 "host_paths": [
-                    "/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/TraceCPU/RISCV/SPEC/Benchmarks/CacheBM/fs/tmp"
+                    "/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/O3CPU/RISCV/SPEC/Benchmarks/CacheBM/fs/tmp"
                 ]
             }
         ],
@@ -1061,7 +1061,7 @@
                     },
                     "response_latency": 2,
                     "sequential_access": false,
-                    "size": 65536,
+                    "size": 1048576,
                     "system": "system",
                     "tag_latency": 2,
                     "tags": {
@@ -1082,7 +1082,7 @@
                             "assoc": 2,
                             "entry_size": 64,
                             "eventq_index": 0,
-                            "size": 65536
+                            "size": 1048576
                         },
                         "power_model": [],
                         "power_state": {
@@ -1100,7 +1100,7 @@
                         },
                         "replacement_policy": "system.cpu.dcache.replacement_policy",
                         "sequential_access": false,
-                        "size": 65536,
+                        "size": 1048576,
                         "system": "system",
                         "tag_latency": 2,
                         "warmup_percentage": 0
@@ -1273,7 +1273,7 @@
                     },
                     "response_latency": 2,
                     "sequential_access": false,
-                    "size": 65536,
+                    "size": 1048576,
                     "system": "system",
                     "tag_latency": 2,
                     "tags": {
@@ -1294,7 +1294,7 @@
                             "assoc": 2,
                             "entry_size": 64,
                             "eventq_index": 0,
-                            "size": 65536
+                            "size": 1048576
                         },
                         "power_model": [],
                         "power_state": {
@@ -1312,7 +1312,7 @@
                         },
                         "replacement_policy": "system.cpu.icache.replacement_policy",
                         "sequential_access": false,
-                        "size": 65536,
+                        "size": 1048576,
                         "system": "system",
                         "tag_latency": 2,
                         "warmup_percentage": 0
@@ -1531,7 +1531,7 @@
             },
             "response_latency": 20,
             "sequential_access": false,
-            "size": 65536,
+            "size": 1048576,
             "system": "system",
             "tag_latency": 20,
             "tags": {
@@ -1552,7 +1552,7 @@
                     "assoc": 1,
                     "entry_size": 64,
                     "eventq_index": 0,
-                    "size": 65536
+                    "size": 1048576
                 },
                 "power_model": [],
                 "power_state": {
@@ -1570,7 +1570,7 @@
                 },
                 "replacement_policy": "system.l2.replacement_policy",
                 "sequential_access": false,
-                "size": 65536,
+                "size": 1048576,
                 "system": "system",
                 "tag_latency": 20,
                 "warmup_percentage": 0
