--- a/Proyecto 3/CPUs/O3CPU/ARM/PARSEC/Benchmarks/CacheBM/config.json
+++ b/Proyecto 3/CPUs/O3CPU/ARM/PARSEC/Benchmarks/CacheBM/config.json
@@ -1202,7 +1202,7 @@
                     },
                     "response_latency": 2,
                     "sequential_access": false,
-                    "size": 16384,
+                    "size": 1048576,
                     "system": "system",
                     "tag_latency": 2,
                     "tags": {
@@ -1223,7 +1223,7 @@
                             "assoc": 2,
                             "entry_size": 64,
                             "eventq_index": 0,
-                            "size": 16384
+                            "size": 1048576
                         },
                         "power_model": [],
                         "power_state": {
@@ -1241,7 +1241,7 @@
                         },
                         "replacement_policy": "system.cpu.dcache.replacement_policy",
                         "sequential_access": false,
-                        "size": 16384,
+                        "size": 1048576,
                         "system": "system",
                         "tag_latency": 2,
                         "warmup_percentage": 0
@@ -1308,7 +1308,7 @@
                     },
                     "response_latency": 2,
                     "sequential_access": false,
-                    "size": 16384,
+                    "size": 1048576,
                     "system": "system",
                     "tag_latency": 2,
                     "tags": {
@@ -1329,7 +1329,7 @@
                             "assoc": 2,
                             "entry_size": 64,
                             "eventq_index": 0,
-                            "size": 16384
+                            "size": 1048576
                         },
                         "power_model": [],
                         "power_state": {
@@ -1347,7 +1347,7 @@
                         },
                         "replacement_policy": "system.cpu.icache.replacement_policy",
                         "sequential_access": false,
-                        "size": 16384,
+                        "size": 1048576,
                         "system": "system",
                         "tag_latency": 2,
                         "warmup_percentage": 0
@@ -1460,7 +1460,7 @@
             },
             "response_latency": 20,
             "sequential_access": false,
-            "size": 16384,
+            "size": 1048576,
             "system": "system",
             "tag_latency": 20,
             "tags": {
@@ -1481,7 +1481,7 @@
                     "assoc": 1,
                     "entry_size": 64,
                     "eventq_index": 0,
-                    "size": 16384
+                    "size": 1048576
                 },
                 "power_model": [],
                 "power_state": {
@@ -1499,7 +1499,7 @@
                 },
                 "replacement_policy": "system.l2.replacement_policy",
                 "sequential_access": false,
-                "size": 16384,
+                "size": 1048576,
                 "system": "system",
                 "tag_latency": 20,
                 "warmup_percentage": 0
