--- a/Proyecto 3/CPUs/O3CPU/ARM/PARSEC/Benchmarks/RPBM/config.ini
+++ b/Proyecto 3/CPUs/O3CPU/ARM/PARSEC/Benchmarks/RPBM/config.ini
@@ -981,7 +981,7 @@ eventq_index=0
 
 [system.cpu.workload]
 type=Process
-cmd=./src/benchmark 1 ./data/test.txt ./data/output.txt
+cmd=./src/benchmark 1 ./data/testO3.txt ./data/output.txt
 cwd=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/ARM/blackscholes
 drivers=
 egid=100
@@ -1072,7 +1072,7 @@ leaders=
 possible_states=
 
 [system.l2.replacement_policy]
-type=MRURP
+type=RandomRP
 eventq_index=0
 
 [system.l2.tags]
