--- a/Proyecto 3/CPUs/O3CPU/ARM/SPEC/Benchmarks/CacheBM/config.ini
+++ b/Proyecto 3/CPUs/O3CPU/ARM/SPEC/Benchmarks/CacheBM/config.ini
@@ -197,7 +197,7 @@ replace_expansions=true
 replacement_policy=system.cpu.dcache.replacement_policy
 response_latency=2
 sequential_access=false
-size=16384
+size=1048576
 system=system
 tag_latency=2
 tags=system.cpu.dcache.tags
@@ -236,7 +236,7 @@ power_model=
 power_state=system.cpu.dcache.tags.power_state
 replacement_policy=system.cpu.dcache.replacement_policy
 sequential_access=false
-size=16384
+size=1048576
 system=system
 tag_latency=2
 warmup_percentage=0
@@ -246,7 +246,7 @@ type=SetAssociative
 assoc=2
 entry_size=64
 eventq_index=0
-size=16384
+size=1048576
 
 [system.cpu.dcache.tags.power_state]
 type=PowerState
@@ -707,7 +707,7 @@ replace_expansions=true
 replacement_policy=system.cpu.icache.replacement_policy
 response_latency=2
 sequential_access=false
-size=16384
+size=1048576
 system=system
 tag_latency=2
 tags=system.cpu.icache.tags
@@ -746,7 +746,7 @@ power_model=
 power_state=system.cpu.icache.tags.power_state
 replacement_policy=system.cpu.icache.replacement_policy
 sequential_access=false
-size=16384
+size=1048576
 system=system
 tag_latency=2
 warmup_percentage=0
@@ -756,7 +756,7 @@ type=SetAssociative
 assoc=2
 entry_size=64
 eventq_index=0
-size=16384
+size=1048576
 
 [system.cpu.icache.tags.power_state]
 type=PowerState
@@ -1049,7 +1049,7 @@ replace_expansions=true
 replacement_policy=system.l2.replacement_policy
 response_latency=20
 sequential_access=false
-size=16384
+size=1048576
 system=system
 tag_latency=20
 tags=system.l2.tags
@@ -1088,7 +1088,7 @@ power_model=
 power_state=system.l2.tags.power_state
 replacement_policy=system.l2.replacement_policy
 sequential_access=false
-size=16384
+size=1048576
 system=system
 tag_latency=20
 warmup_percentage=0
@@ -1098,7 +1098,7 @@ type=SetAssociative
 assoc=1
 entry_size=64
 eventq_index=0
-size=16384
+size=1048576
 
 [system.l2.tags.power_state]
 type=PowerState
