--- a/Proyecto 3/CPUs/O3CPU/RISCV/SPEC/Benchmarks/CacheBM/config.ini
+++ b/Proyecto 3/CPUs/O3CPU/RISCV/SPEC/Benchmarks/CacheBM/config.ini
@@ -197,7 +197,7 @@ replace_expansions=true
 replacement_policy=system.cpu.dcache.replacement_policy
 response_latency=2
 sequential_access=false
-size=65536
+size=1048576
 system=system
 tag_latency=2
 tags=system.cpu.dcache.tags
@@ -236,7 +236,7 @@ power_model=
 power_state=system.cpu.dcache.tags.power_state
 replacement_policy=system.cpu.dcache.replacement_policy
 sequential_access=false
-size=65536
+size=1048576
 system=system
 tag_latency=2
 warmup_percentage=0
@@ -246,7 +246,7 @@ type=SetAssociative
 assoc=2
 entry_size=64
 eventq_index=0
-size=65536
+size=1048576
 
 [system.cpu.dcache.tags.power_state]
 type=PowerState
@@ -791,7 +791,7 @@ replace_expansions=true
 replacement_policy=system.cpu.icache.replacement_policy
 response_latency=2
 sequential_access=false
-size=65536
+size=1048576
 system=system
 tag_latency=2
 tags=system.cpu.icache.tags
@@ -830,7 +830,7 @@ power_model=
 power_state=system.cpu.icache.tags.power_state
 replacement_policy=system.cpu.icache.replacement_policy
 sequential_access=false
-size=65536
+size=1048576
 system=system
 tag_latency=2
 warmup_percentage=0
@@ -840,7 +840,7 @@ type=SetAssociative
 assoc=2
 entry_size=64
 eventq_index=0
-size=65536
+size=1048576
 
 [system.cpu.icache.tags.power_state]
 type=PowerState
@@ -1118,7 +1118,7 @@ replace_expansions=true
 replacement_policy=system.l2.replacement_policy
 response_latency=20
 sequential_access=false
-size=65536
+size=1048576
 system=system
 tag_latency=20
 tags=system.l2.tags
@@ -1157,7 +1157,7 @@ power_model=
 power_state=system.l2.tags.power_state
 replacement_policy=system.l2.replacement_policy
 sequential_access=false
-size=65536
+size=1048576
 system=system
 tag_latency=20
 warmup_percentage=0
@@ -1167,7 +1167,7 @@ type=SetAssociative
 assoc=1
 entry_size=64
 eventq_index=0
-size=65536
+size=1048576
 
 [system.l2.tags.power_state]
 type=PowerState
@@ -1357,19 +1357,19 @@ system=system
 type=RedirectPath
 app_path=/proc
 eventq_index=0
-host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/TraceCPU/RISCV/SPEC/Benchmarks/CacheBM/fs/proc
+host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/O3CPU/RISCV/SPEC/Benchmarks/CacheBM/fs/proc
 
 [system.redirect_paths1]
 type=RedirectPath
 app_path=/sys
 eventq_index=0
-host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/TraceCPU/RISCV/SPEC/Benchmarks/CacheBM/fs/sys
+host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/O3CPU/RISCV/SPEC/Benchmarks/CacheBM/fs/sys
 
 [system.redirect_paths2]
 type=RedirectPath
 app_path=/tmp
 eventq_index=0
-host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/TraceCPU/RISCV/SPEC/Benchmarks/CacheBM/fs/tmp
+host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/O3CPU/RISCV/SPEC/Benchmarks/CacheBM/fs/tmp
 
 [system.tol2bus]
 type=CoherentXBar
